--- a/analysis/DeepVelo_Pancreas_Reproduce.ipynb
+++ b/analysis/DeepVelo_Pancreas_Reproduce.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we follow the instructions of DeepVelo and are able to reproduce the case study of pancreatic endocrinogenesis by [Cui et al.](https://doi.org/10.1101/2022.04.03.486877) in bioRxiv (doi: https://doi.org/10.1101/2022.04.03.486877) with the latest codes from github."
+    "In this notebook, we follow the instructions of DeepVelo and are able to reproduce the case study of pancreatic endocrinogenesis by [Cui et al.](https://doi.org/10.1101/2022.04.03.486877) in bioRxiv (doi: https://doi.org/10.1101/2022.04.03.486877) with the latest codes (8/12/2022) from github."
    ]
   },
   {
