--- a/analysis/VeloVAE_Pancreas_Reproduce.ipynb
+++ b/analysis/VeloVAE_Pancreas_Reproduce.ipynb
@@ -15,7 +15,7 @@
    "id": "f5f68a03-2af9-4650-92ab-9f99ac1ec7e3",
    "metadata": {},
    "source": [
-    "In this notebook, we follow the instructions of VeloVAE and are able to reproduce the case study of pancreatic endocrinogenesis by [Gu et al.](https://doi.org/10.1101/2022.07.08.499381) in bioRxiv (doi: https://doi.org/10.1101/2022.07.08.499381) with the latest codes from github."
+    "In this notebook, we follow the instructions of VeloVAE and are able to reproduce the case study of pancreatic endocrinogenesis by [Gu et al.](https://doi.org/10.1101/2022.07.08.499381) in bioRxiv (doi: https://doi.org/10.1101/2022.07.08.499381) with the latest codes (8/12/2022) from github."
    ]
   },
   {
