--- a/analysis/loss_functions.ipynb
+++ b/analysis/loss_functions.ipynb
@@ -493,27 +493,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "ea1cd962",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "isinstance(loss_df, pd.DataFrame)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "667904ce-cd5a-4906-bfdb-fa8b5531b3aa",
    "metadata": {},
@@ -832,7 +811,7 @@
     "                                   gene_list=gene_list,\\\n",
     "                                   permutation_ratio=0.125,\\\n",
     "                                   n_jobs=1,\n",
-    "                                   loss_func='rmsd'\n",
+    "                                   loss_func=('mix', 0.5)\n",
     "                                   )\n",
     "cellDancer_df"
    ]
