function map_cdr_velocity_to_dynamo

--- a/notebooks/case_study_pancreas_dynamo.ipynb
+++ b/notebooks/case_study_pancreas_dynamo.ipynb
@@ -51,25 +51,29 @@
     "import scipy\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "import dynamo as dyn "
+    "import dynamo as dyn\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|-----> Downloading data to ./data/endocrinogenesis_day15.h5ad\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dyn.configuration.set_figure_params('dynamo', background='white')\n",
-    "adata = dyn.sample_data.pancreatic_endocrinogenesis()"
+    "def map_cdr_velocity_to_dynamo(dancer_df,adata):\n",
+    "    dancer_genes = dancer_df['gene_name'].drop_duplicates()\n",
+    "    dancer_df[\"velocity_S\"] = dancer_df[\"splice_predict\"]-dancer_df[\"splice\"]\n",
+    "    dancer_velocity_s = dancer_df[['cellID', 'gene_name', 'velocity_S']]\n",
+    "    pivoted = dancer_velocity_s.pivot(index=\"cellID\", columns=\"gene_name\", values=\"velocity_S\")\n",
+    "    velocity_matrix = np.zeros(adata.shape)\n",
+    "    adata_ds_zeros = pd.DataFrame(velocity_matrix, columns=adata.var.index, index=adata.obs.index)\n",
+    "    celldancer_velocity_s_df = (adata_ds_zeros + pivoted).fillna(0)[adata.var.index]\n",
+    "\n",
+    "    adata.layers['velocity_S'] = scipy.sparse.csr_matrix(celldancer_velocity_s_df.values)\n",
+    "    adata.var['use_for_dynamics'] = adata.var.index.isin(dancer_genes)\n",
+    "    adata.var['use_for_transition'] = adata.var.index.isin(dancer_genes)\n",
+    "    return(adata.copy())"
    ]
   },
   {
@@ -89,12 +93,15 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "|-----> Downloading data to ./data/endocrinogenesis_day15.h5ad\n",
       "|-----> recipe_monocle_keep_filtered_cells_key is None. Using default value from DynamoAdataConfig: recipe_monocle_keep_filtered_cells_key=True\n",
       "|-----> recipe_monocle_keep_filtered_genes_key is None. Using default value from DynamoAdataConfig: recipe_monocle_keep_filtered_genes_key=True\n",
       "|-----> recipe_monocle_keep_raw_layers_key is None. Using default value from DynamoAdataConfig: recipe_monocle_keep_raw_layers_key=True\n",
@@ -127,40 +134,32 @@
       "|-----> cell cycle scoring...\n",
       "|-----> computing cell phase...\n",
       "|-----> [cell phase estimation] in progress: 100.0000%\n",
-      "|-----> [cell phase estimation] finished [31.6043s]\n",
+      "|-----> [cell phase estimation] finished [23.2167s]\n",
       "|-----> <insert> cell_cycle_phase to obs in AnnData Object.\n",
       "|-----> <insert> cell_cycle_scores to obsm in AnnData Object.\n",
       "|-----> [Cell Cycle Scores Estimation] in progress: 100.0000%\n",
-      "|-----> [Cell Cycle Scores Estimation] finished [0.4529s]\n",
+      "|-----> [Cell Cycle Scores Estimation] finished [0.5055s]\n",
       "|-----> [recipe_monocle preprocess] in progress: 100.0000%\n",
-      "|-----> [recipe_monocle preprocess] finished [7.8227s]\n",
+      "|-----> [recipe_monocle preprocess] finished [7.7637s]\n",
       "|-----> dynamics_del_2nd_moments_key is None. Using default value from DynamoAdataConfig: dynamics_del_2nd_moments_key=False\n",
       "|-----------> removing existing M layers:[]...\n",
       "|-----------> making adata smooth...\n",
       "|-----> calculating first/second moments...\n",
       "|-----> [moments calculation] in progress: 100.0000%\n",
-      "|-----> [moments calculation] finished [18.8714s]\n"
+      "|-----> [moments calculation] finished [19.5928s]\n"
      ]
     }
    ],
    "source": [
-    "pancreas_genes = [\"Hes1\",\"Nkx6-1\",\"Nkx2-2\",\"Neurog3\",\"Neurod1\",\"Pax4\",\"Pax6\",\"Arx\",\"Pdx1\",\"Ins1\",\"Ins2\",\"Ghrl\",\"Ptf1a\",\"Iapp\",\"Isl1\", \"Sox9\",\"Gcg\"]\n",
-    "dyn.pp.recipe_monocle(adata, n_top_genes=4000, fg_kwargs={\"shared_count\": 20}, genes_to_append=pancreas_genes)\n",
-    "dyn.tl.dynamics(adata, model='static') \n",
-    "\n",
-    "# load the prediction results of cellDancer\n",
+    "# load the prediction results of cellDancer and the adata of dynamo\n",
     "cellDancer_df = pd.read_csv('/Users/shengyuli/Library/CloudStorage/OneDrive-HoustonMethodist/work/Velocity/bin/cellDancer_polish/analysis/CaseStudyNotebook/your_path/PancreaticEndocrinogenesis_cellDancer_estimation.csv')\n",
-    "dancer_genes = cellDancer_df['gene_name'].drop_duplicates()\n",
-    "cellDancer_df[\"velocity_S\"] = cellDancer_df[\"splice_predict\"]-cellDancer_df[\"splice\"]\n",
-    "dancer_velocity_s = cellDancer_df[['cellID', 'gene_name', 'velocity_S']]\n",
-    "pivoted = dancer_velocity_s.pivot(index=\"cellID\", columns=\"gene_name\", values=\"velocity_S\")\n",
-    "velocity_matrix = np.zeros(adata.shape)\n",
-    "adata_ds_zeros = pd.DataFrame(velocity_matrix, columns=adata.var.index, index=adata.obs.index)\n",
-    "celldancer_velocity_s_df = (adata_ds_zeros + pivoted).fillna(0)[adata.var.index]\n",
+    "adata_dyn = dyn.sample_data.pancreatic_endocrinogenesis()\n",
     "\n",
-    "adata.layers['velocity_S'] = scipy.sparse.csr_matrix(celldancer_velocity_s_df.values)\n",
-    "adata.var['use_for_dynamics'] = adata.var.index.isin(dancer_genes)\n",
-    "adata.var['use_for_transition'] = adata.var.index.isin(dancer_genes)"
+    "pancreas_genes = [\"Hes1\",\"Nkx6-1\",\"Nkx2-2\",\"Neurog3\",\"Neurod1\",\"Pax4\",\"Pax6\",\"Arx\",\"Pdx1\",\"Ins1\",\"Ins2\",\"Ghrl\",\"Ptf1a\",\"Iapp\",\"Isl1\", \"Sox9\",\"Gcg\"]\n",
+    "dyn.pp.recipe_monocle(adata_dyn, n_top_genes=4000, fg_kwargs={\"shared_count\": 20}, genes_to_append=pancreas_genes)\n",
+    "dyn.tl.dynamics(adata_dyn, model='static') \n",
+    "\n",
+    "adata=map_cdr_velocity_to_dynamo(cellDancer_df,adata_dyn)"
    ]
   },
   {
@@ -190,16 +189,16 @@
       "|-----? adata already have basis umap. dimension reduction umap will be skipped! \n",
       "set enforce=True to re-performing dimension reduction.\n",
       "|-----> [dimension_reduction projection] in progress: 100.0000%\n",
-      "|-----> [dimension_reduction projection] finished [0.0057s]\n",
+      "|-----> [dimension_reduction projection] finished [0.0039s]\n",
       "|-----> 0 genes are removed because of nan velocity values.\n",
       "|-----> [calculating transition matrix via pearson kernel with sqrt transform.] in progress: 100.0000%\n",
-      "|-----> [calculating transition matrix via pearson kernel with sqrt transform.] finished [14.9795s]\n",
+      "|-----> [calculating transition matrix via pearson kernel with sqrt transform.] finished [14.3924s]\n",
       "|-----> [projecting velocity vector to low dimensional embedding] in progress: 100.0000%\n",
-      "|-----> [projecting velocity vector to low dimensional embedding] finished [0.9569s]\n",
+      "|-----> [projecting velocity vector to low dimensional embedding] finished [1.0276s]\n",
       "|-----> 0 genes are removed because of nan velocity values.\n",
       "Using existing pearson_transition_matrix found in .obsp.\n",
       "|-----> [projecting velocity vector to low dimensional embedding] in progress: 100.0000%\n",
-      "|-----> [projecting velocity vector to low dimensional embedding] finished [1.1169s]\n",
+      "|-----> [projecting velocity vector to low dimensional embedding] finished [1.0609s]\n",
       "|-----------> plotting with basis key=X_umap\n",
       "|-----------> skip filtering clusters by stack threshold when stacking color because it is not a numeric type\n"
      ]
@@ -261,7 +260,7 @@
       "|-----> [SparseVFC] begins...\n",
       "|-----> Sampling control points based on data velocity magnitude...\n",
       "|-----> [SparseVFC] in progress: 100.0000%\n",
-      "|-----> [SparseVFC] finished [0.2525s]\n",
+      "|-----> [SparseVFC] finished [0.3184s]\n",
       "|-----> <insert> velocity_pca_SparseVFC to obsm in AnnData Object.\n",
       "|-----> <insert> X_pca_SparseVFC to obsm in AnnData Object.\n",
       "|-----> <insert> VecFld_pca to uns in AnnData Object.\n",
@@ -282,7 +281,7 @@
       "|-----------? nbrs_idx argument is ignored and recomputed because nbrs_idx is not None and return_nbrs=True\n",
       "|-----------> calculating neighbor indices...\n",
       "|-----> [ddhodge completed] in progress: 100.0000%\n",
-      "|-----> [ddhodge completed] finished [20.5890s]\n",
+      "|-----> [ddhodge completed] finished [20.5809s]\n",
       "|-----> Computing divergence...\n"
      ]
     },
@@ -290,7 +289,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Calculating divergence: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 4/4 [00:00<00:00, 10.33it/s]"
+      "Calculating divergence: 100%|█████████████████████| 4/4 [00:00<00:00,  9.94it/s]"
      ]
     },
     {
@@ -314,7 +313,7 @@
      "text": [
       "|-----> <insert> obs_vf_angle_pca to obs in AnnData Object.\n",
       "|-----> [VectorField] in progress: 100.0000%\n",
-      "|-----> [VectorField] finished [21.4671s]\n",
+      "|-----> [VectorField] finished [21.5317s]\n",
       "|-----> VectorField reconstruction begins...\n",
       "|-----> Retrieve X and V based on basis: UMAP. \n",
       "        Vector field will be learned in the UMAP space.\n",
@@ -323,7 +322,7 @@
       "|-----> [SparseVFC] begins...\n",
       "|-----> Sampling control points based on data velocity magnitude...\n",
       "|-----> [SparseVFC] in progress: 100.0000%\n",
-      "|-----> [SparseVFC] finished [0.4357s]\n",
+      "|-----> [SparseVFC] finished [0.4374s]\n",
       "|-----> <insert> velocity_umap_SparseVFC to obsm in AnnData Object.\n",
       "|-----> <insert> X_umap_SparseVFC to obsm in AnnData Object.\n",
       "|-----> <insert> VecFld_umap to uns in AnnData Object.\n",
@@ -332,7 +331,7 @@
       "|-----------? nbrs_idx argument is ignored and recomputed because nbrs_idx is not None and return_nbrs=True\n",
       "|-----------> calculating neighbor indices...\n",
       "|-----> [ddhodge completed] in progress: 100.0000%\n",
-      "|-----> [ddhodge completed] finished [20.4629s]\n",
+      "|-----> [ddhodge completed] finished [18.7982s]\n",
       "|-----> Computing curl...\n"
      ]
     },
@@ -340,7 +339,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Calculating 2-D curl: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3696/3696 [00:00<00:00, 15278.47it/s]"
+      "Calculating 2-D curl: 100%|██████████████| 3696/3696 [00:00<00:00, 15543.98it/s]"
      ]
     },
     {
@@ -355,7 +354,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Calculating divergence: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 4/4 [00:00<00:00, 21.71it/s]"
+      "Calculating divergence: 100%|█████████████████████| 4/4 [00:00<00:00, 23.67it/s]"
      ]
     },
     {
@@ -379,14 +378,14 @@
      "text": [
       "|-----> <insert> obs_vf_angle_umap to obs in AnnData Object.\n",
       "|-----> [VectorField] in progress: 100.0000%\n",
-      "|-----> [VectorField] finished [21.5476s]\n"
+      "|-----> [VectorField] finished [19.8864s]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Calculating divergence: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 4/4 [00:00<00:00,  9.23it/s]\n"
+      "Calculating divergence: 100%|█████████████████████| 4/4 [00:00<00:00, 10.07it/s]\n"
      ]
     },
     {
@@ -394,7 +393,7 @@
      "output_type": "stream",
      "text": [
       "|-----> [Calculating acceleration] in progress: 100.0000%\n",
-      "|-----> [Calculating acceleration] finished [0.1758s]\n",
+      "|-----> [Calculating acceleration] finished [0.1751s]\n",
       "|-----> <insert> acceleration to layers in AnnData Object.\n"
      ]
     },
@@ -402,7 +401,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Calculating 2-D curl: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3696/3696 [00:00<00:00, 19886.58it/s]\n"
+      "Calculating 2-D curl: 100%|██████████████| 3696/3696 [00:00<00:00, 17567.05it/s]\n"
      ]
     }
    ],
@@ -527,7 +526,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Transforming subset Jacobian: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3696/3696 [00:00<00:00, 100887.34it/s]\n"
+      "Transforming subset Jacobian: 100%|██████| 3696/3696 [00:00<00:00, 98024.28it/s]\n"
      ]
     },
     {
