--- a/notebooks/case_study_neuro.ipynb
+++ b/notebooks/case_study_neuro.ipynb
@@ -689,7 +689,7 @@
    "id": "f38143c2-6822-4b06-a083-3bbb2e2410fb",
    "metadata": {},
    "source": [
-    "To project the prediction of RNA velocity to vector fields in embedding space and to estimate pseudotime by using all genes, all the 2,159 genes have already been predicted and could be downloaded and unzipped from [DentateGyrus_cellDancer_estimation.csv.zip](https://drive.google.com/file/d/1CziKfu_4Lvecfdv9OJ3qktT5-Do0naiE/view?usp=sharing). The csv file could be loaded by ```pd.read_csv()```."
+    "To project the prediction of RNA velocity to velocity vector flow in embedding space and to estimate pseudotime by using all genes, all the 2,159 genes have already been predicted and could be downloaded and unzipped from [DentateGyrus_cellDancer_estimation.csv.zip](https://drive.google.com/file/d/1CziKfu_4Lvecfdv9OJ3qktT5-Do0naiE/view?usp=sharing). The csv file could be loaded by ```pd.read_csv()```."
    ]
   },
   {
@@ -714,7 +714,7 @@
     "tags": []
    },
    "source": [
-    "## Project the RNA velocity to vector fields in the embedding space"
+    "## Project the RNA velocity to velocity vector flow in the embedding space"
    ]
   },
   {
