--- a/notebooks/case_study_pancreas_dynamo.ipynb
+++ b/notebooks/case_study_pancreas_dynamo.ipynb
@@ -27,7 +27,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To run the notebook locally, [Dynamo](https://dynamo-release.readthedocs.io/en/latest/index.html) could be referred to to build the python environment."
+    "To run the notebook locally, [Installation](installation.html) could be could be referred to to build the python environment.\n",
+    "\n",
+    "[Dynamo](https://dynamo-release.readthedocs.io/en/latest/index.html) could be installed after then."
    ]
   },
   {
@@ -51,7 +53,8 @@
     "import scipy\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "import dynamo as dyn\n"
+    "import dynamo as dyn\n",
+    "from celldancer.utilities import map_cd_velocity_to_dynamo"
    ]
   },
   {
@@ -60,20 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dyn.configuration.set_figure_params('dynamo', background='white')\n",
-    "def map_cdr_velocity_to_dynamo(dancer_df,adata):\n",
-    "    dancer_genes = dancer_df['gene_name'].drop_duplicates()\n",
-    "    dancer_df[\"velocity_S\"] = dancer_df[\"splice_predict\"]-dancer_df[\"splice\"]\n",
-    "    dancer_velocity_s = dancer_df[['cellID', 'gene_name', 'velocity_S']]\n",
-    "    pivoted = dancer_velocity_s.pivot(index=\"cellID\", columns=\"gene_name\", values=\"velocity_S\")\n",
-    "    velocity_matrix = np.zeros(adata.shape)\n",
-    "    adata_ds_zeros = pd.DataFrame(velocity_matrix, columns=adata.var.index, index=adata.obs.index)\n",
-    "    celldancer_velocity_s_df = (adata_ds_zeros + pivoted).fillna(0)[adata.var.index]\n",
-    "\n",
-    "    adata.layers['velocity_S'] = scipy.sparse.csr_matrix(celldancer_velocity_s_df.values)\n",
-    "    adata.var['use_for_dynamics'] = adata.var.index.isin(dancer_genes)\n",
-    "    adata.var['use_for_transition'] = adata.var.index.isin(dancer_genes)\n",
-    "    return(adata.copy())"
+    "dyn.configuration.set_figure_params('dynamo', background='white')"
    ]
   },
   {
@@ -514,7 +504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By using dynamo to visualize the expression and apply the jacobian analysis, we detect that Pax4 got down-regulated by Arx in cell type Alpha. Arx got up-regulated by Pax4 in cell type Beta."
+    "By using dynamo to visualize the expression and apply the jacobian analysis, we detect that Pax4 got down-regulated by Arx in cell type Alpha. Arx got down-regulated by Pax4 in cell type Beta."
    ]
   },
   {
