--- a/notebooks/case_study_pancreas.ipynb
+++ b/notebooks/case_study_pancreas.ipynb
@@ -72,7 +72,7 @@
    "id": "5adce882-b0ac-4e05-96ff-5729eae7a3e4",
    "metadata": {},
    "source": [
-    "To display the prediction in the embedding space and to build Uniform Manifold Approximation and Projection (UMAP) based on reaction parameters, all the 2,000 genes have already been predicted and could be downloaded and unzipped from [PancreaticEndocrinogenesis_cellDancer_estimation.csv.zip](https://drive.google.com/file/d/1n_ZxAXuKB1BzcpIDkPj3XdOs-Ni45yD7/view?usp=sharing). The result was predicted from the unzipped file of [PancreaticEndocrinogenesis_cell_type_u_s.csv.zip](https://drive.google.com/file/d/16hV9t66edOgjCmoBuEfekS3ijtL1fYNc/view?usp=sharing) with ```cd.velocity(cell_type_u_s, permutation_ratio=0.5, n_jobs=8)```. For the detail of pre-processing steps, [Data Preparation](data_processing.html) could be referred to."
+    "To display the prediction in the embedding space and to build Uniform Manifold Approximation and Projection (UMAP) based on reaction parameters, all the 2,000 genes have already been predicted and could be downloaded and unzipped from [PancreaticEndocrinogenesis_cellDancer_estimation.csv.zip](https://drive.google.com/file/d/1n_ZxAXuKB1BzcpIDkPj3XdOs-Ni45yD7/view?usp=sharing). The result was predicted from the unzipped file of [PancreaticEndocrinogenesis_cell_type_u_s.csv.zip](https://drive.google.com/file/d/16hV9t66edOgjCmoBuEfekS3ijtL1fYNc/view?usp=sharing) with ```cd.velocity(cell_type_u_s, permutation_ratio=0.5, n_jobs=8)```. For the detail of pre-processing steps, [Data Preparation](data_preprocessing.html) could be referred to."
    ]
   },
   {
@@ -378,7 +378,7 @@
    "id": "34cdc007-f5f1-4073-b537-e3095ad2f558",
    "metadata": {},
    "source": [
-    "## Project the RNA velocity to vector fields in the embedding space"
+    "## Project the RNA velocity to velocity vector flow in the embedding space"
    ]
   },
   {
