--- a/notebooks/case_study_gastrulation.ipynb
+++ b/notebooks/case_study_gastrulation.ipynb
@@ -64,7 +64,7 @@
    "id": "330798de-f6c2-4653-99c3-c7d6fd97b8e3",
    "metadata": {},
    "source": [
-    "## Load gastrulation erythroid maturation data "
+    "## Load data "
    ]
   },
   {
@@ -287,9 +287,7 @@
    "id": "667904ce-cd5a-4906-bfdb-fa8b5531b3aa",
    "metadata": {},
    "source": [
-    "```cd.velocity()``` could be used to estimate the velocity. \n",
-    "\n",
-    "Here, 15 genes in ```gene_list``` are estimated as an example. By default, the Deep Neural Network (DNN) will be trained at most 200 epochs. It checks the loss every 10 epochs. If the loss has no improvement in 3 checked epochs, the epoch will be ended. The network at that time will be used for the estimation. If supported by equipment, parallel computing could be used to improve the speed, ```n_jobs``` could be adjusted according to demand.\n",
+    " Here, 15 genes in ```gene_list``` are estimated as an example. By default, the Deep Neural Network (DNN) will be trained at most 200 epochs. We check the loss every 10 epochs. If the loss has no improvement in 3 checked epochs, the training will be ended. The network at that time will be used for the estimation. We used ```n_jobs```= 8 for multiprocessing.\n",
     "\n",
     "Finally, the predicted unspliced and spliced reads, alpha, beta, and gamma are added to the original dataframe and returned."
    ]
@@ -615,7 +613,7 @@
    "id": "31ef842c-295e-4e7b-b5d1-c548e6a6a4c8",
    "metadata": {},
    "source": [
-    "## Visualize the phase portraits of sample genes"
+    "## Visualize the phase portraits"
    ]
   },
   {
@@ -677,12 +675,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cee892fe",
-   "metadata": {
-    "tags": []
-   },
+   "id": "525aa628",
+   "metadata": {},
    "source": [
-    "## Load velocity estimation result of 2,000 genes"
+    "## Project the velocity onto the embedding space"
    ]
   },
   {
@@ -690,7 +686,7 @@
    "id": "8380d564-ce14-4536-bbaa-0bf4a23a60d3",
    "metadata": {},
    "source": [
-    "To project the prediction of RNA velocity to velocity vector flow in embedding space and to estimate pseudotime by using all genes, all the 2,000 genes have already been predicted and could be downloaded and unzipped from [GastrulationErythroid_cellDancer_estimation.csv.zip](https://drive.google.com/file/d/1J4GB-Bn2SdmK56wXka5TdvkImspPwIjH/view?usp=sharing). The .csv file could be loaded by ```pd.read_csv()```."
+    "To project the prediction of RNA velocity to velocity vector flow in embedding space and to estimate pseudotime by using all genes. 2,000 highly variable genes have already been predicted and the result can be downloaded from [GastrulationErythroid_cellDancer_estimation.csv.zip](https://drive.google.com/file/d/1J4GB-Bn2SdmK56wXka5TdvkImspPwIjH/view?usp=sharing). We load the saved result with ```pd.read_csv()```."
    ]
   },
   {
@@ -705,15 +701,7 @@
    "source": [
     "# load the prediction result of all genes\n",
     "cellDancer_df_path = 'your_path/GastrulationErythroid_cellDancer_estimation.csv'\n",
-    "cellDancer_df=pd.read_csv(cellDancer_df_path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "525aa628",
-   "metadata": {},
-   "source": [
-    "## Project the RNA velocity to velocity vector flow in the embedding space"
+    "cellDancer_df = pd.read_csv(cellDancer_df_path)"
    ]
   },
   {
@@ -1187,6 +1175,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79f1f5b8",
+   "metadata": {},
+   "source": [
+    "The long trajectories used for pseudotime dertermination are (optionally) shown. In this case, there are there long trajectories, which are colored from light to dark according to their own unadjusted pseudotime. The cells are colored according to the long trajectories that are used for determination of the pseudotime of the cells. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "d0c1afd7-2d6d-48e5-b73e-ad3656d64600",
@@ -1338,7 +1334,7 @@
     "tags": []
    },
    "source": [
-    "## Project the RNA velocity to velocity vector flow in the embedding space for transcriptional boost genes"
+    "## Project the RNA velocity onto the embedding space using the transcriptional boost genes"
    ]
   },
   {
@@ -1411,7 +1407,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1425,7 +1421,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "610c699f0cd8c4f129acd9140687fff6866bed0eb8e82f249fc8848b827b628c"
+   }
   }
  },
  "nbformat": 4,
