improve the description

--- a/notebooks/case_study_gastrulation.ipynb
+++ b/notebooks/case_study_gastrulation.ipynb
@@ -1108,7 +1108,7 @@
    "id": "0cead259-2ea6-40ee-b177-adaf6668b2eb",
    "metadata": {},
    "source": [
-    "Based on the projection of RNA velocity in embedding space, the pseudotime could be estimated with ```cd.pseudo_time()```."
+    "Based on the projection of RNA velocity in embedding space, the pseudotime can be estimated with ```cd.pseudo_time()```."
    ]
   },
   {
@@ -1170,7 +1170,6 @@
     "                               n_paths = 3,\n",
     "                               plot_rep_trajs=True,\n",
     "                               psrng_seeds_diffusion=[i for i in range(n_repeats)],\n",
-    "                               activate_umap_paths_divider=False,\n",
     "                               n_jobs=8)"
    ]
   },
