improve the descriptions

--- a/notebooks/case_study_pancreas.ipynb
+++ b/notebooks/case_study_pancreas.ipynb
@@ -64,7 +64,7 @@
    "id": "5a99e119-7072-437d-8d93-1dcfb81c8e79",
    "metadata": {},
    "source": [
-    "## Load the velocity estimation result of all 2,000 genes in pancreatic endocrinogenesis data"
+    "## Load the result"
    ]
   },
   {
@@ -72,15 +72,11 @@
    "id": "5adce882-b0ac-4e05-96ff-5729eae7a3e4",
    "metadata": {},
    "source": [
-    "To display the prediction in the embedding space and to build Uniform Manifold Approximation and Projection (UMAP) based on reaction parameters, all the 2,000 genes have already been predicted and could be downloaded and unzipped from [PancreaticEndocrinogenesis_cellDancer_estimation.csv.zip](https://drive.google.com/file/d/1n_ZxAXuKB1BzcpIDkPj3XdOs-Ni45yD7/view?usp=sharing). The result was predicted from the unzipped file of [PancreaticEndocrinogenesis_cell_type_u_s.csv.zip](https://drive.google.com/file/d/16hV9t66edOgjCmoBuEfekS3ijtL1fYNc/view?usp=sharing) with ```cd.velocity(cell_type_u_s, permutation_ratio=0.5, n_jobs=8)```. For the detail of pre-processing steps, [Data Preparation](data_preprocessing.html) could be referred to."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6ddd43b0-10b9-4094-a5cd-e723214934c0",
-   "metadata": {},
-   "source": [
-    "The prediction result could be loaded with ```pd.read_csv('your_path/PancreaticEndocrinogenesis_cellDancer_estimation.csv')```. "
+    "We used the preprocessed data [PancreaticEndocrinogenesis_cell_type_u_s.csv.zip](https://drive.google.com/file/d/16hV9t66edOgjCmoBuEfekS3ijtL1fYNc/view?usp=sharing) to predict the RNA velocities (see the details of pre-processing steps [Data Preparation](data_preprocessing.html)). \n",
+    "Below are the command we used for the RNA velocity estimation. \n",
+    "    \n",
+    "    cellDancer_df = cd.velocity(cell_type_u_s, permutation_ratio=0.5, n_jobs=8)\n",
+    "The prediction result can be downloaded from [PancreaticEndocrinogenesis_cellDancer_estimation.csv.zip](https://drive.google.com/file/d/1n_ZxAXuKB1BzcpIDkPj3XdOs-Ni45yD7/view?usp=sharing). "
    ]
   },
   {
@@ -378,7 +374,7 @@
    "id": "34cdc007-f5f1-4073-b537-e3095ad2f558",
    "metadata": {},
    "source": [
-    "## Project the RNA velocity to velocity vector flow in the embedding space"
+    "## Project the RNA velocity onto the embedding space"
    ]
   },
   {
@@ -386,7 +382,7 @@
    "id": "e3d3dcdf-60fa-4b27-833b-6d3280b05a0c",
    "metadata": {},
    "source": [
-    "The projection of RNA velocity in the embedding space could be calculated with ```cd.compute_cell_velocity()```. If not specified, all genes in cellDancer_df will be used to calculate the projection of RNA velocity in the embedding space. We project the velocity vectors of the cells into the low-dimensional embedding space following the method of [velocyto](https://velocyto.org/velocyto.py/index.html#) and [scVelo](https://scvelo.readthedocs.io/).\n",
+    "The projection of RNA velocity in the embedding space could be calculated with ```cd.compute_cell_velocity()```. If not specified, all genes in cellDancer_df will be used to calculate the projection of RNA velocity onto the embedding space.\n",
     "\n",
     "After the calculation, the projected direction in the embedding space, i.e. columns 'velocity1' and 'velocity2' will be added to the original dataframe. ```cdplt.scatter_cell()``` could be used to display the predicted direction in embedding space."
    ]
