improve the descriptions

--- a/notebooks/case_study_pancreas_dynamo.ipynb
+++ b/notebooks/case_study_pancreas_dynamo.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "cellDancer could be integrated into downstream analysis, such as [dynamo](https://dynamo-release.readthedocs.io/en/latest/index.html) proposed by [Qiu et al.](https://www.sciencedirect.com/science/article/pii/S0092867421015774#!)\n",
     "\n",
-    "In this tutorial, the output of cellDancer ([PancreaticEndocrinogenesis_cellDancer_estimation.csv](PancreaticEndocrinogenesis_cellDancer_estimation.csv)) in pancreatic endocrinogenesis is transferred to adata. We apply Dynamo to (1) perform vector field analysis and (2) detect gene interaction with jacobian analysis."
+    "In this tutorial, the output of cellDancer ([PancreaticEndocrinogenesis_cellDancer_estimation.csv](PancreaticEndocrinogenesis_cellDancer_estimation.csv)) in pancreatic endocrinogenesis is transferred to adata as dynamo input. We apply dynamo to (1) perform vector field analysis and (2) detect gene regulation with Jacobian analysis."
    ]
   },
   {
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To run the notebook locally, installations of [cellDancer](installation.html) and [dynamo](https://dynamo-release.readthedocs.io/en/latest/index.html) could be eferred to to build the python environment."
+    "To run the notebook locally, both cellDancer and dynamo are need. Refer [cellDancer](installation.html) and [dynamo](https://dynamo-release.readthedocs.io/en/latest/index.html) for instructions of building the packages."
    ]
   },
   {
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The result cellDancer is transferred to adata to be compatible with dynamo."
+    "Import the cellDancer predicted RNA velocity to dynamo adata using the API `export_velocity_to_dynamo`."
    ]
   },
   {
@@ -139,30 +139,29 @@
     }
    ],
    "source": [
-    "# load the prediction results of cellDancer and the adata of dynamo\n",
-    "cellDancer_df = pd.read_csv('your_path/PancreaticEndocrinogenesis_cellDancer_estimation.csv')\n",
+    "# First create dynamo adata \n",
     "adata_dyn = dyn.sample_data.pancreatic_endocrinogenesis()\n",
-    "\n",
     "pancreas_genes = [\"Hes1\",\"Nkx6-1\",\"Nkx2-2\",\"Neurog3\",\"Neurod1\",\"Pax4\",\"Pax6\",\"Arx\",\"Pdx1\",\"Ins1\",\"Ins2\",\"Ghrl\",\"Ptf1a\",\"Iapp\",\"Isl1\", \"Sox9\",\"Gcg\"]\n",
     "dyn.pp.recipe_monocle(adata_dyn, n_top_genes=4000, fg_kwargs={\"shared_count\": 20}, genes_to_append=pancreas_genes)\n",
     "dyn.tl.dynamics(adata_dyn, model='static') \n",
     "\n",
-    "# replace adata.layers['velocity_S'], adata.var['use_for_dynamics'], and adata.var['use_for_transition']\n",
-    "adata=export_velocity_to_dynamo(cellDancer_df,adata_dyn)"
+    "# replace adata.layers['velocity_S'], adata.var['use_for_dynamics'], and adata.var['use_for_transition'] with cellDancer outputs.\n",
+    "cellDancer_df = pd.read_csv('your_path/PancreaticEndocrinogenesis_cellDancer_estimation.csv')\n",
+    "adata = export_velocity_to_dynamo(cellDancer_df,adata_dyn)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualize RNA velocity to velocity vector flow with a streamline plot in the embedding space"
+    "## Project RNA velocity onto the embedding space"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The velocity vector flow in the embedding space could be visualized by dynamo."
+    "The projection of RNA velocity imported from cellDancer onto the embedding space was done by using dynamo method `cell_velocities()`"
    ]
   },
   {
@@ -222,15 +221,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Learn the vector field in the embedding space and compute dynamics"
+    "## Learn the vector fields"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use dynamo to learn and visualize the vector fields in UMAP.\n",
-    "The emitting fixed point #0 is identified in ductal cells. The absorbing fixed points #1 #2 #3 are identified in Alpha-, Beta-, and Epsilon-cells."
+    "Use dynamo to learn and visualize the vector fields on UMAP."
    ]
   },
   {
@@ -440,6 +438,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The emitting fixed point #0 is identified in ductal cells. The absorbing fixed points #1 #2 #3 are identified in Alpha-, Beta-, and Epsilon-cells."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -496,14 +501,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Detect regulator/effector gene relations by jacobian analysis "
+    "## Jacobian analysis "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By using dynamo to visualize the expression and apply the jacobian analysis, we detect that Pax4 got down-regulated by Arx in cell type Alpha. Arx got down-regulated by Pax4 in cell type Beta."
+    "Jacobian analysis shows that Pax4 is down-regulated by Arx in the Alpha-cells; Arx is down-regulated by Pax4 in the Beta-cells."
    ]
   },
   {
@@ -567,6 +572,13 @@
     "    effectors=['Arx'],\n",
     "    alpha=1,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize the expression levels of Arx and Pax4 on UMAP. "
    ]
   },
   {
