improve the description

--- a/notebooks/case_study_neuro.ipynb
+++ b/notebooks/case_study_neuro.ipynb
@@ -60,7 +60,7 @@
    "id": "cdbe57f4-eb57-4d22-9605-251e6b972185",
    "metadata": {},
    "source": [
-    "## Load mouse hippocampal dentate gyrus neurogenesis data"
+    "## Load input data"
    ]
   },
   {
@@ -68,9 +68,8 @@
    "id": "b3e1cc0c-cab8-4b1b-aaa1-43b41484fc64",
    "metadata": {},
    "source": [
-    "The input data for cellDancer contains the abundances of unspliced RNA and spliced RNA. For the detail of obtaining the dataset and pre-processing steps, [Data Preparation](data_preprocessing.html) could be referred to.\n",
-    "\n",
-    "The data of mouse hippocampal dentate gyrus neurogenesis could be downloaded and unzipped from [DentateGyrus_cell_type_u_s.csv.zip](https://drive.google.com/file/d/1wm_frx0Zq6OVN4Eu8xXAX5ggHwXfg3xe/view?usp=sharing). It could be loaded by ```pd.read_csv('your_path/DentateGyrus_cell_type_u_s.csv')```. To load your own data, the dataframe should contain columns 'gene_name', 'unsplice', 'splice' ,'cellID' ,'clusters' ,'embedding1', and 'embedding2.' For a detailed description of the data structure, [Data Preparation](data_preprocessing.html) could be referred to."
+    "The input data for cellDancer contains the preprocessed abundances of unspliced RNA and spliced RNA.\n",
+    "The data of mouse hippocampal dentate gyrus neurogenesis can be ownloaded from [DentateGyrus_cell_type_u_s.csv.zip](https://drive.google.com/file/d/1wm_frx0Zq6OVN4Eu8xXAX5ggHwXfg3xe/view?usp=sharing). To load your own data, the dataframe should contain columns 'gene_name', 'unsplice', 'splice' ,'cellID' ,'clusters' ,'embedding1', and 'embedding2.' For a detailed description about the preprocessing and the data structure, refer to [Data Preparation](data_preprocessing.html) ."
    ]
   },
   {
@@ -676,12 +675,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2673a7c6-c3bd-4f4c-86a0-889c96087c7d",
+   "id": "ba421ec5-7426-4fe0-bbf5-f1f8ea9efff1",
    "metadata": {
     "tags": []
    },
    "source": [
-    "## Load the velocity estimation result of all 2,159 genes"
+    "## Project the RNA velocity to velocity vector flow in the embedding space"
    ]
   },
   {
@@ -689,7 +688,7 @@
    "id": "f38143c2-6822-4b06-a083-3bbb2e2410fb",
    "metadata": {},
    "source": [
-    "To project the prediction of RNA velocity to velocity vector flow in embedding space and to estimate pseudotime by using all genes, all the 2,159 genes have already been predicted and could be downloaded and unzipped from [DentateGyrus_cellDancer_estimation.csv.zip](https://drive.google.com/file/d/1CziKfu_4Lvecfdv9OJ3qktT5-Do0naiE/view?usp=sharing). The csv file could be loaded by ```pd.read_csv()```."
+    "To project the prediction of RNA velocity to velocity vector flow in embedding space and to estimate pseudotime by using all genes, all the 2,159 genes have already been predicted and could be downloaded and unzipped from [DentateGyrus_cellDancer_estimation.csv.zip](https://drive.google.com/file/d/1CziKfu_4Lvecfdv9OJ3qktT5-Do0naiE/view?usp=sharing)."
    ]
   },
   {
@@ -705,16 +704,6 @@
     "# load the prediction result of all genes\n",
     "cellDancer_df_file = 'your_path/DentateGyrus_cellDancer_estimation.csv'\n",
     "cellDancer_df=pd.read_csv(cellDancer_df_file)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ba421ec5-7426-4fe0-bbf5-f1f8ea9efff1",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Project the RNA velocity to velocity vector flow in the embedding space"
    ]
   },
   {
@@ -809,7 +798,6 @@
     "                                          speed_up=(60,60),\n",
     "                                          n_paths = 5,\n",
     "                                          psrng_seeds_diffusion=[i for i in range(n_repeats)],\n",
-    "                                          activate_umap_paths_divider=False,\n",
     "                                          n_jobs=8)"
    ]
   },
@@ -912,7 +900,7 @@
    "id": "b7156a67-5b12-4201-9d77-f1705a6f5cfa",
    "metadata": {},
    "source": [
-    "## Display the reaction rates, the abundance of unspliced RNA, and the abundance of spliced RNA in embedding space"
+    "## Visualize the reaction rates, the abundance of unspliced RNA, and the abundance of spliced RNA in embedding space"
    ]
   },
   {
@@ -998,7 +986,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1012,7 +1000,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "610c699f0cd8c4f129acd9140687fff6866bed0eb8e82f249fc8848b827b628c"
+   }
   }
  },
  "nbformat": 4,
